kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-prometheus-to-all
spec:
  description: Allow Prometheus scraping
  endpointSelector:
    matchLabels:
      prometheus: kube-prometheus-stack
  egress:
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/prometheus: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-prometheus-to-all
spec:
  description: Allow Prometheus scraping
  endpointSelector:
    matchLabels:
      ingress.home.arpa/prometheus: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            prometheus: kube-prometheus-stack
